--- a/unlisted_web_page_mdisc_karbytes2025_20.html
+++ b/unlisted_web_page_mdisc_karbytes2025_20.html
@@ -13,7 +13,7 @@
  * license: <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a>
  */
 
-<span style="background: #ffff00">The following list of <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/M-DISC" target="_blank" rel="noopener">M_DISC</a> contents encompass the entire collection of public domain web-based files which comprise the body of intellectual property named <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/about_karbytes/" target="_blank" rel="noopener">karbytes</a> as that collection is configured at 11:59PM Pacific Standard Time on [UNDEFINED_DAY] (and that specific <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">file</a> collection is named <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/preparing_to_make_mdisc_set_on_06august2025/" target="_blank" rel="noopener">karbytes2025_20</a>).</span> 
+<span style="background: #ffff00">The following list of <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/M-DISC" target="_blank" rel="noopener">M_DISC</a> contents encompass the entire collection of public domain web-based files which comprise the body of intellectual property named <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/about_karbytes/" target="_blank" rel="noopener">karbytes</a> as that collection is configured at 11:59PM Pacific Standard Time on 07_AUGUST_2025 (and that specific <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">file</a> collection is named <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/preparing_to_make_mdisc_set_on_06august2025/" target="_blank" rel="noopener">karbytes2025_20</a>).</span> 
 
 <span style="background: #ffd700">Throughout all of karbytes' lifetime, karbytes intends to create at least three M_DISC copies of the file collection referred to on this web page as <strong>karbytes2025_20</strong>.</span>
 
@@ -27,7 +27,7 @@
 
 Each zip file which is enumerated on this web page has exactly one uniquely corresponding karbytes-created <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/GitHub" target="_blank" rel="noopener">GitHub</a> repository (which is associated with the GitHub username <a style="background: #00ff00;color: #000000" href="https://github.com/karlinarayberinger" target="_blank" rel="noopener">@karlinarayberinger</a>).
 
-Each zip file which is enumerated on this web page whose file name contains the string "_[undefined_day]" (quotation characters not included) was refers to exactly one karbytes-created GitHub repository which karbytes thinks is likely that karbytes will eventually update after 11:59PM Pacific Standard Time on [UNDEFINED_DAY]. 
+Each zip file which is enumerated on this web page whose file name contains the string "_08august2025" (quotation characters not included) was refers to exactly one karbytes-created GitHub repository which karbytes thinks is likely that karbytes will eventually update after 11:59PM Pacific Standard Time on 07_AUGUST_2025. 
 
 Each zip file which is enumerated on this web page has exactly one uniquely corresponding <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/micro_directory_definition/" target="_blank" rel="noopener">"micro directory"</a> web page (in the web page named <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_macro_directory/" target="_blank" rel="noopener">RAW_GITHUB_FILES_MACRO_DIRECTORY</a> of the website named <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/" target="_blank" rel="noopener">Karbytes For Life Blog dot WordPress dot Com</a>) if and only if that zip file is derived from a public (rather than from a private) GitHub repository. Zip files which are enumerated on this web page and which are downloaded from private GitHub repositories (generally) contain the leading characters "karbytes_basement_" (quotations not included).
 
@@ -43,7 +43,7 @@ Finally, each zip file which is referenced on this web page has a file name with
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-karbytes2025_20: // folder contains exactly 153 files (approximately 16709.63 megabytes total).
+karbytes2025_20: // folder contains exactly 153 files (approximately 16711.72 megabytes total).
 
     - zip_file_0: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_instagram_karbytes_2024/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_2024-main.zip</a> // 332.7 megabytes
 
@@ -107,7 +107,7 @@ karbytes2025_20: // folder contains exactly 153 files (approximately 16709.63 me
 
     - zip_file_30: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARBYTES_BRAND_IMAGES_2021/" target="_blank" rel="noopener">KARBYTES_BRAND_IMAGES_2021-main.zip</a> // 10.2 megabytes
 
-    - zip_file_31: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARBYTES_FOR_LIFE_BLOG/" target="_blank" rel="noopener">KARBYTES_FOR_LIFE_BLOG-main_[undefined_day].zip</a> // 752.7 kilobytes
+    - zip_file_31: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARBYTES_FOR_LIFE_BLOG/" target="_blank" rel="noopener">KARBYTES_FOR_LIFE_BLOG-main_08august2025.zip</a> // 752.7 kilobytes
 
     - zip_file_32: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARBYTES_JOURNAL_2022_PART_0/" target="_blank" rel="noopener">KARBYTES_JOURNAL_2022_PART_0-main.zip</a> // 32.5 megabytes
 
@@ -315,7 +315,7 @@ karbytes2025_20: // folder contains exactly 153 files (approximately 16709.63 me
 
     - zip_file_134: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARLINA_OBJECT_extension_pack_46/" target="_blank" rel="noopener">KARLINA_OBJECT_extension_pack_46-main.zip</a> // 205.0 megabytes
 
-    - zip_file_135: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47/" target="_blank" rel="noopener">KARLINA_OBJECT_extension_pack_47-main.zip</a> // 4.1 megabytes
+    - zip_file_135: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47/" target="_blank" rel="noopener">KARLINA_OBJECT_extension_pack_47-main.zip</a> // 6.2 megabytes
 
     - zip_file_136: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARLINA_OBJECT_summer_2023_starter_pack/" target="_blank" rel="noopener">KARLINA_OBJECT_summer_2023_starter_pack-main.zip</a> // 28.8 megabytes
 
@@ -345,11 +345,11 @@ karbytes2025_20: // folder contains exactly 153 files (approximately 16709.63 me
 
     - zip_file_149: <strong>KARLINA_OBJECT_APPS-main.zip</strong> // 24.0 megabytes; downloaded from a private karbytes-created GitHub repository; may contain some public karbytes content in the form of "unlisted web page" source code and associated media files (for the website named Karbytes For Life Blog dot WordPress dot Com). 
 
-    - zip_file_150: <strong>KARBYTES_BLOG_APPS-main_[undefined_day].zip</strong> // 493.6 megabytes; downloaded from a private karbytes-created GitHub repository; may contain some public karbytes content in the form of "unlisted web page" source code and associated media files (for the website named Karbytes For Life Blog dot WordPress dot Com). 
+    - zip_file_150: <strong>KARBYTES_BLOG_APPS-main_08august2025.zip</strong> // 493.6 megabytes; downloaded from a private karbytes-created GitHub repository; may contain some public karbytes content in the form of "unlisted web page" source code and associated media files (for the website named Karbytes For Life Blog dot WordPress dot Com). 
 
     - zip_file_151: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_karbytes_test_github_hosted_website/" target="_blank" rel="noopener">karbytes_test_github_hosted_website-main.zip</a> // 23.6  megabytes
 
-    - zip_file_152: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARBYTES_BLOG_APPS_github_hosted_website/" target="_blank" rel="noopener">KARBYTES_BLOG_APPS_github_hosted_website-main_[undefined_day].zip</a> // 48.6  megabytes
+    - zip_file_152: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARBYTES_BLOG_APPS_github_hosted_website/" target="_blank" rel="noopener">KARBYTES_BLOG_APPS_github_hosted_website-main_08august2025.zip</a> // 48.6  megabytes
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
